# dune-xt-common

./: .binder  .clang-format  .clang-format-3.8  .clang-tidy  .cmake_format  .cmake_format.py  .codecov.yml  .drone.yml  .gitattributes  .gitignore  .gitmodules  .gitsuper  .mailmap  .pylicense-cpp.cfg  .pylicense-cpp.py  .pylicense-other.cfg  .pylicense-other.py  .travis.after_script.bash  .travis.cfg.in  .travis.ctest  .travis.make_env_file.py  .travis.script.bash  .travis.test_python.bash  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  LICENSE  README  README.md  azure-pipelines.yml  config.h.cmake  dune-stuff.pc.in  dune-xt-common.pc.in  dune-xt.pc.in  dune.module  stamp-vc
cmake/modules/: AddALUGridCompileFlags.cmake  CMakeLists.txt  DuneStuffMacros.cmake  DuneTBB.cmake  DuneUtils.cmake  DuneXTInstallPythonPackage.cmake  DuneXTTesting.cmake  DuneXtCommonMacros.cmake  DuneXtMacros.cmake  FindCBLAS.cmake  FindClangFormat.cmake  FindClangTidy.cmake  FindClp.cmake  FindEigen3.cmake  FindFASP.cmake  FindFekete.cmake  FindLAPACKE.cmake  FindLIKWID.cmake  FindLPSolve.cmake  FindLebedevData.cmake  FindMKL.cmake  FindMPI4PY.cmake  FindMatExp.cmake  FindQhull.cmake  FindTBB.cmake  GridUtils.cmake  Hints.cmake  XtCompilerSupport.cmake  XtTooling.cmake  dxt_all_sorted_testnames.cmake.in  dxt_headercheck_targets.cmake.in  dxt_test_binaries.cmake.in
dune/: CMakeLists.txt  __init__.py
dune/stuff/: CMakeLists.txt  color.hh  configcontainer.hh  disable_dune_warnings.hh  fem.hh  localmassmatrix.hh  mem_debug.hh  misc.hh  signals.hh  validation.hh
dune/stuff/common/: algorithm.hh  color.cc  color.hh  compiler.hh  configcontainer.cc  configcontainer.hh  configuration.cc  configuration.hh  convergence-study.cc  convergence-study.hh  crtp.hh  debug.hh  disable_warnings.hh  exceptions.hh  filesystem.cc  filesystem.hh  fixed_map.hh  float_cmp.hh  float_cmp_internal.hh  float_cmp_style.hh  fmatrix.hh  fvector.hh  localization-study.cc  localization-study.hh  logging.cc  logging.hh  logstreams.cc  logstreams.hh  math.cc  math.hh  matrix.hh  mem_debug.hh  memory.hh  misc.cc  misc.hh  print.hh  printing.hh  profiler.cc  profiler.hh  random.hh  (+15 more)
dune/stuff/common/header/: disable_warnings.hh  reenable_warnings.hh
dune/stuff/common/parallel/: helper.cc  helper.hh  partitioner.hh  threadmanager.cc  threadmanager.hh  threadstorage.hh
dune/stuff/common/parameter/: configcontainer.cc  configcontainer.hh  validation.hh
dune/stuff/fem/: localmassmatrix.hh
dune/stuff/grid/: ranges.hh
dune/stuff/test/: .gitignore  CMakeLists.txt  common.cxx  common.hh  common_algorithm.cc  common_color.cc  common_configuration.cc  common_fixed_map.cc  common_fixed_map.cc_disabled  common_float_cmp.cc  common_logger.cc  common_math.cc  common_parallel.cc  common_parameter_configcontainer.cc  common_parameter_vaalidation.cc  common_parameter_validation.cc  common_print.cc  common_profiler.cc  common_string.cc  common_timedlogging.cc  common_tuple.cc  common_typenames.cc  common_validation.cc  compile_pgf_output.sh  empty.cc  fem_error.cc  float_cmp.hh  main.hh  main.hxx  main_header.cxx  main_header.hh  test_validation.cc
dune/stuff/test/gtest/: gtest-all.cc  gtest.h
dune/stuff/test/gtest/src/: gtest.cc
dune/xt/: CMakeLists.txt
dune/xt/common/: CMakeLists.txt  algorithm.hh  bindings.cc  bindings.hh  bisect.hh  cblas.cc  cblas.hh  color.cc  color.hh  common.bindings.cc  compiler.hh  configuration.cc  configuration.hh  configuration.pbh  convergence-study.cc  convergence-study.hh  coordinates.hh  crtp.hh  debug.hh  densevector.hh  deprecated.hh  disable_warnings.hh  exceptions.bindings.hh  exceptions.cc  exceptions.hh  exceptions.pbh  filesystem.cc  filesystem.hh  fix-ambiguous-std-math-overloads.cc  fix-ambiguous-std-math-overloads.hh  fixed_map.hh  float_cmp.hh  float_cmp_generated.hh  float_cmp_generated.hxx  float_cmp_internal.hh  float_cmp_style.hh  fmatrix.hh  fmatrix.pbh  fvector.hh  fvector.pbh  (+49 more)
dune/xt/common/parallel/: communicator.hh  helper.cc  helper.hh  mpi_comm_wrapper.cc  mpi_comm_wrapper.hh  partitioner.hh  threadmanager.cc  threadmanager.hh  threadstorage.hh
dune/xt/common/test/: .gitignore  CMakeLists.txt  algorithm.cc  bisection.cc  color.cc  common.cxx  common.hh  communicator.cc  compile_pgf_output.sh  configuration.cc  crtp.cc  debug.cc  empty.cc  fixed_map.cc  float_cmp.cc  float_cmp.hh  float_cmp.mini  float_cmp_generated.hh  float_cmp_generated.hxx  fmatrix.cc  fvector.cc  logging.cc  main.hxx  math.cc  matrix.cc  memory.cc  parallel.cc  parallel.mini  parameter.cc  print.cc  profiler.cc  random.cc  random.mini  string.cc  timedlogging.cc  timings.cc  tuple.cc  type_traits.cc  type_utils.cc  validation.cc  (+6 more)
dune/xt/common/test/gtest/: gtest-all.cc  gtest-all.cxx  gtest.h
dune/xt/test/: .gitignore  CMakeLists.txt  common.cxx  common.hh  common_algorithm.cc  common_color.cc  common_configuration.cc  common_fixed_map.cc  common_float_cmp.cc  common_logger.cc  common_math.cc  common_parallel.cc  common_print.cc  common_profiler.cc  common_string.cc  common_timedlogging.cc  common_tuple.cc  common_typenames.cc  common_validation.cc  compile_pgf_output.sh  empty.cc  float_cmp.hh  main.hxx
dune/xt/test/gtest/: gtest-all.cc  gtest.h
python/: .gitignore  CMakeLists.txt  README  setup.cfg  setup.py  setup.py.in
python/dune/: CMakeLists.txt  __init__.py
python/dune/xt/: CMakeLists.txt  __init__.py  bindings.cc  bindings.hh  cmake.py  codegen.py  empty.cc  fvector.pbh  logging.cc  timings.cc
python/dune/xt/common/: CMakeLists.txt  __init__.py  bindings.cc  bindings.hh  cmake.py  configuration.hh  configuration.pbh  empty.cc  exceptions.bindings.hh  exceptions.cc  fmatrix.hh  fmatrix.pbh  fvector.hh  logging.cc  logging.py  mpi.cc  test.py  timedlogging.cc  timings.cc  timings.py
python/dune/xt/empty/: __init__.py
python/scripts/: CMakeLists.txt  __init__.py  distribute_testing.py  dxt_code_generation.py  generate_compare_functions.py  numa_speedup.py
python/test/: base.py  mpi.py
python/wrapper/: CMakeLists.txt  __init__.py  dune_xt_execute.py
stuff/: math.hh  (+15 more)
(+30 files in other folders)
